# CCCC

./: CMakeLists.txt  README.md  install.cccc
CMake/: CCCC_CMake_macros.cmake
docs/: Doxyfile.in
docs/src/: mainpage.dox
machine/: local  mistral
src/: CMakeLists.txt  test.cpp  test.f90
src/core/: CCCC.cpp  CCCC.hpp  Component.cpp  Component.hpp  Error.cpp  Error.hpp
src/data/: Variable.cpp  Variable.hpp
src/grid/: Grid.cpp  Grid.hpp  GridGauss.cpp  GridGauss.hpp  GridStruct.cpp  GridStruct.hpp  GridUnstruct.cpp  GridUnstruct.hpp  Grid_Flags.hpp
src/mpi/: CMPI.cpp  CMPI.hpp
src/wrappers/: CCCC.h  CCCC_capi.cpp  CCCC_cdef.f90  CCCC_mod.f90  cccc.h
src/yaxt/: Yaxt.cpp  Yaxt.hpp
tests/: CMakeLists.txt  test.cpp
